<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:background="@color/primary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inventory_nav"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/secondary"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:src="@drawable/digitbloq_naked"
            android:contentDescription="@string/logo_hint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/primary"
            android:text="@string/inventory"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/imageViewNotification"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_marginEnd="20dp"
            android:src="@drawable/notification"
            android:contentDescription="@string/notification_hint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="true"
            android:focusable="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/inventory_nav"
        app:layout_constraintBottom_toTopOf="@id/inventory_footer"
        app:layoutManager="LinearLayoutManager"
        tools:context="com.zybooks.michael_reynolds_inventory_app.InventoryActivity"
        tools:listitem="@layout/inventory_card"
        tools:itemCount="5"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inventory_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_background_secondary"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:onClick="OnCreateNode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
